after fixing html overflow

--- a/editcss.css
+++ b/editcss.css
@@ -1,10 +1,13 @@
 
 html,body{
-    height: 100%
+
+ 
+    height: 100%;
 }
 
 html{
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 @font-face{
