--- a/indexstyles.css
+++ b/indexstyles.css
@@ -1,11 +1,15 @@
 
 html,body{
-    height: 100%
+    height: 100%;
+    
 }
 
 html{
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
+
+
 
 @font-face{
     /* used in title page */
@@ -60,7 +64,7 @@ html,body{
 
 .container{
     height: 100%;
-    width: 100%;
+    max-width: 100%;
 
 }
 
